# ask-magenta-skill

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
locale/de-de/: AskMagentaKeyword.voc  ask.magenta.dialog  magenta.ask.intent  utterance.rx
locale/en-us/: AskMagentaKeyword.voc  LaunchMagentaKeyword.voc  StopMagentaKeyword.voc  ask.magenta.dialog  launch.magenta.dialog  magenta.ask.dialog  magenta.ask.intent  no.intent.dialog  stop.magenta.dialog  utterance.rx
magenta/voice/: __init__.py  client.py  config.py
tests/: test_client.py
