[tool.poetry]
name = "ask-magenta"
version = "0.2.0"
description = "Ask Magenta skill for Mycroft"
authors = ["vadim <vadim@axxessio.com>"]
packages = [
    { include = "magenta.voice" }
]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = "^0.23.0"
circuitbreaker = "^1.3.2"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
mtranslate = "^1.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.17.2"
respx = "^0.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py38"]
